NanoMLParser.fsyacc.output
Output file describing compiled parser placed in NanoMLParser.fs and NanoMLParser.fsi
------------------------
states = 
state 0:
  items:
    _starttoplevel ->  . toplevel

  actions:
    action 'EOF' (noprec):   shift 2
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   shift 13
    action 'LPAREN' (noprec):   shift 44
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (explicit nonassoc 9994):   shift 27
    action 'IS' (noprec):   error
    action 'IF' (explicit nonassoc 9995):   shift 21
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9997):   shift 47
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   shift 41
    action 'FALSE' (noprec):   shift 42
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   shift 43
    action 'VAR' (noprec):   shift 40
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto toplevel: 1
    goto def: 5
    goto expr: 8
    goto app: 18
    goto non_app: 17
    goto arithmetic: 19
    goto cond: 20

state 1:
  items:
    _starttoplevel -> toplevel . 

  actions:
    action 'EOF' (noprec):   accept
    action 'SEMICOLON2' (noprec):   accept
    action 'LET' (noprec):   accept
    action 'LPAREN' (noprec):   accept
    action 'RPAREN' (noprec):   accept
    action 'COLON' (noprec):   accept
    action 'FUN' (noprec):   accept
    action 'IS' (noprec):   accept
    action 'IF' (noprec):   accept
    action 'THEN' (noprec):   accept
    action 'ELSE' (noprec):   accept
    action 'EQUAL' (noprec):   accept
    action 'LESS' (noprec):   accept
    action 'PLUS' (noprec):   accept
    action 'MINUS' (noprec):   accept
    action 'TIMES' (noprec):   accept
    action 'DIVIDE' (noprec):   accept
    action 'TRUE' (noprec):   accept
    action 'FALSE' (noprec):   accept
    action 'BOOL' (noprec):   accept
    action 'FLOAT' (noprec):   accept
    action 'INT' (noprec):   accept
    action 'VAR' (noprec):   accept
    action 'TARROW' (noprec):   accept
    action 'TBOOL' (noprec):   accept
    action 'TFLOAT' (noprec):   accept
    action 'TINT' (noprec):   accept
    action 'error' (noprec):   accept
    action '#' (noprec):   accept
    action '$$' (noprec):   accept

  immediate action:   accept
 gotos:

state 2:
  items:
    toplevel -> 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> 'EOF'
    action 'SEMICOLON2' (noprec):   reduce toplevel --> 'EOF'
    action 'LET' (noprec):   reduce toplevel --> 'EOF'
    action 'LPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'RPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'COLON' (noprec):   reduce toplevel --> 'EOF'
    action 'FUN' (noprec):   reduce toplevel --> 'EOF'
    action 'IS' (noprec):   reduce toplevel --> 'EOF'
    action 'IF' (noprec):   reduce toplevel --> 'EOF'
    action 'THEN' (noprec):   reduce toplevel --> 'EOF'
    action 'ELSE' (noprec):   reduce toplevel --> 'EOF'
    action 'EQUAL' (noprec):   reduce toplevel --> 'EOF'
    action 'LESS' (noprec):   reduce toplevel --> 'EOF'
    action 'PLUS' (noprec):   reduce toplevel --> 'EOF'
    action 'MINUS' (noprec):   reduce toplevel --> 'EOF'
    action 'TIMES' (noprec):   reduce toplevel --> 'EOF'
    action 'DIVIDE' (noprec):   reduce toplevel --> 'EOF'
    action 'TRUE' (noprec):   reduce toplevel --> 'EOF'
    action 'FALSE' (noprec):   reduce toplevel --> 'EOF'
    action 'BOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'FLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'INT' (noprec):   reduce toplevel --> 'EOF'
    action 'VAR' (noprec):   reduce toplevel --> 'EOF'
    action 'TARROW' (noprec):   reduce toplevel --> 'EOF'
    action 'TBOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'TFLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'TINT' (noprec):   reduce toplevel --> 'EOF'
    action 'error' (noprec):   reduce toplevel --> 'EOF'
    action '#' (noprec):   reduce toplevel --> 'EOF'
    action '$$' (noprec):   reduce toplevel --> 'EOF'

  immediate action:   reduce toplevel --> 'EOF'
 gotos:

state 3:
  items:
    toplevel -> 'EOF' . 
    toplevel -> def 'SEMICOLON2' 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> 'EOF'
    action 'SEMICOLON2' (noprec):   reduce toplevel --> 'EOF'
    action 'LET' (noprec):   reduce toplevel --> 'EOF'
    action 'LPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'RPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'COLON' (noprec):   reduce toplevel --> 'EOF'
    action 'FUN' (noprec):   reduce toplevel --> 'EOF'
    action 'IS' (noprec):   reduce toplevel --> 'EOF'
    action 'IF' (noprec):   reduce toplevel --> 'EOF'
    action 'THEN' (noprec):   reduce toplevel --> 'EOF'
    action 'ELSE' (noprec):   reduce toplevel --> 'EOF'
    action 'EQUAL' (noprec):   reduce toplevel --> 'EOF'
    action 'LESS' (noprec):   reduce toplevel --> 'EOF'
    action 'PLUS' (noprec):   reduce toplevel --> 'EOF'
    action 'MINUS' (noprec):   reduce toplevel --> 'EOF'
    action 'TIMES' (noprec):   reduce toplevel --> 'EOF'
    action 'DIVIDE' (noprec):   reduce toplevel --> 'EOF'
    action 'TRUE' (noprec):   reduce toplevel --> 'EOF'
    action 'FALSE' (noprec):   reduce toplevel --> 'EOF'
    action 'BOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'FLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'INT' (noprec):   reduce toplevel --> 'EOF'
    action 'VAR' (noprec):   reduce toplevel --> 'EOF'
    action 'TARROW' (noprec):   reduce toplevel --> 'EOF'
    action 'TBOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'TFLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'TINT' (noprec):   reduce toplevel --> 'EOF'
    action 'error' (noprec):   reduce toplevel --> 'EOF'
    action '#' (noprec):   reduce toplevel --> 'EOF'
    action '$$' (noprec):   reduce toplevel --> 'EOF'

  immediate action: <none>
 gotos:

state 4:
  items:
    toplevel -> 'EOF' . 
    toplevel -> expr 'SEMICOLON2' 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> 'EOF'
    action 'SEMICOLON2' (noprec):   reduce toplevel --> 'EOF'
    action 'LET' (noprec):   reduce toplevel --> 'EOF'
    action 'LPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'RPAREN' (noprec):   reduce toplevel --> 'EOF'
    action 'COLON' (noprec):   reduce toplevel --> 'EOF'
    action 'FUN' (noprec):   reduce toplevel --> 'EOF'
    action 'IS' (noprec):   reduce toplevel --> 'EOF'
    action 'IF' (noprec):   reduce toplevel --> 'EOF'
    action 'THEN' (noprec):   reduce toplevel --> 'EOF'
    action 'ELSE' (noprec):   reduce toplevel --> 'EOF'
    action 'EQUAL' (noprec):   reduce toplevel --> 'EOF'
    action 'LESS' (noprec):   reduce toplevel --> 'EOF'
    action 'PLUS' (noprec):   reduce toplevel --> 'EOF'
    action 'MINUS' (noprec):   reduce toplevel --> 'EOF'
    action 'TIMES' (noprec):   reduce toplevel --> 'EOF'
    action 'DIVIDE' (noprec):   reduce toplevel --> 'EOF'
    action 'TRUE' (noprec):   reduce toplevel --> 'EOF'
    action 'FALSE' (noprec):   reduce toplevel --> 'EOF'
    action 'BOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'FLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'INT' (noprec):   reduce toplevel --> 'EOF'
    action 'VAR' (noprec):   reduce toplevel --> 'EOF'
    action 'TARROW' (noprec):   reduce toplevel --> 'EOF'
    action 'TBOOL' (noprec):   reduce toplevel --> 'EOF'
    action 'TFLOAT' (noprec):   reduce toplevel --> 'EOF'
    action 'TINT' (noprec):   reduce toplevel --> 'EOF'
    action 'error' (noprec):   reduce toplevel --> 'EOF'
    action '#' (noprec):   reduce toplevel --> 'EOF'
    action '$$' (noprec):   reduce toplevel --> 'EOF'

  immediate action: <none>
 gotos:

state 5:
  items:
    toplevel -> def . 'EOF'
    toplevel -> def . 'SEMICOLON2' 'EOF'
    toplevel -> def . 'SEMICOLON2' toplevel

  actions:
    action 'EOF' (noprec):   shift 6
    action 'SEMICOLON2' (noprec):   shift 7
    action 'LET' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (noprec):   error
    action 'IS' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   error
    action 'VAR' (noprec):   error
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 6:
  items:
    toplevel -> def 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> def 'EOF'
    action 'SEMICOLON2' (noprec):   reduce toplevel --> def 'EOF'
    action 'LET' (noprec):   reduce toplevel --> def 'EOF'
    action 'LPAREN' (noprec):   reduce toplevel --> def 'EOF'
    action 'RPAREN' (noprec):   reduce toplevel --> def 'EOF'
    action 'COLON' (noprec):   reduce toplevel --> def 'EOF'
    action 'FUN' (noprec):   reduce toplevel --> def 'EOF'
    action 'IS' (noprec):   reduce toplevel --> def 'EOF'
    action 'IF' (noprec):   reduce toplevel --> def 'EOF'
    action 'THEN' (noprec):   reduce toplevel --> def 'EOF'
    action 'ELSE' (noprec):   reduce toplevel --> def 'EOF'
    action 'EQUAL' (noprec):   reduce toplevel --> def 'EOF'
    action 'LESS' (noprec):   reduce toplevel --> def 'EOF'
    action 'PLUS' (noprec):   reduce toplevel --> def 'EOF'
    action 'MINUS' (noprec):   reduce toplevel --> def 'EOF'
    action 'TIMES' (noprec):   reduce toplevel --> def 'EOF'
    action 'DIVIDE' (noprec):   reduce toplevel --> def 'EOF'
    action 'TRUE' (noprec):   reduce toplevel --> def 'EOF'
    action 'FALSE' (noprec):   reduce toplevel --> def 'EOF'
    action 'BOOL' (noprec):   reduce toplevel --> def 'EOF'
    action 'FLOAT' (noprec):   reduce toplevel --> def 'EOF'
    action 'INT' (noprec):   reduce toplevel --> def 'EOF'
    action 'VAR' (noprec):   reduce toplevel --> def 'EOF'
    action 'TARROW' (noprec):   reduce toplevel --> def 'EOF'
    action 'TBOOL' (noprec):   reduce toplevel --> def 'EOF'
    action 'TFLOAT' (noprec):   reduce toplevel --> def 'EOF'
    action 'TINT' (noprec):   reduce toplevel --> def 'EOF'
    action 'error' (noprec):   reduce toplevel --> def 'EOF'
    action '#' (noprec):   reduce toplevel --> def 'EOF'
    action '$$' (noprec):   reduce toplevel --> def 'EOF'

  immediate action:   reduce toplevel --> def 'EOF'
 gotos:

state 7:
  items:
    toplevel -> def 'SEMICOLON2' . 'EOF'
    toplevel -> def 'SEMICOLON2' . toplevel

  actions:
    action 'EOF' (noprec):   shift 3
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   shift 13
    action 'LPAREN' (noprec):   shift 44
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (explicit nonassoc 9994):   shift 27
    action 'IS' (noprec):   error
    action 'IF' (explicit nonassoc 9995):   shift 21
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9997):   shift 47
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   shift 41
    action 'FALSE' (noprec):   shift 42
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   shift 43
    action 'VAR' (noprec):   shift 40
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto toplevel: 11
    goto def: 5
    goto expr: 8
    goto app: 18
    goto non_app: 17
    goto arithmetic: 19
    goto cond: 20

state 8:
  items:
    toplevel -> expr . 'EOF'
    toplevel -> expr . 'SEMICOLON2' 'EOF'
    toplevel -> expr . 'SEMICOLON2' toplevel
    arithmetic -> expr . 'PLUS' expr
    arithmetic -> expr . 'MINUS' expr
    arithmetic -> expr . 'TIMES' expr
    arithmetic -> expr . 'DIVIDE' expr
    cond -> expr . 'EQUAL' expr
    cond -> expr . 'LESS' expr

  actions:
    action 'EOF' (noprec):   shift 9
    action 'SEMICOLON2' (noprec):   shift 10
    action 'LET' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (noprec):   error
    action 'IS' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (explicit nonassoc 9996):   shift 59
    action 'LESS' (explicit nonassoc 9996):   shift 60
    action 'PLUS' (explicit left 9997):   shift 55
    action 'MINUS' (explicit left 9997):   shift 56
    action 'TIMES' (explicit left 9998):   shift 57
    action 'DIVIDE' (explicit left 9998):   shift 58
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   error
    action 'VAR' (noprec):   error
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 9:
  items:
    toplevel -> expr 'EOF' . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> expr 'EOF'
    action 'SEMICOLON2' (noprec):   reduce toplevel --> expr 'EOF'
    action 'LET' (noprec):   reduce toplevel --> expr 'EOF'
    action 'LPAREN' (noprec):   reduce toplevel --> expr 'EOF'
    action 'RPAREN' (noprec):   reduce toplevel --> expr 'EOF'
    action 'COLON' (noprec):   reduce toplevel --> expr 'EOF'
    action 'FUN' (noprec):   reduce toplevel --> expr 'EOF'
    action 'IS' (noprec):   reduce toplevel --> expr 'EOF'
    action 'IF' (noprec):   reduce toplevel --> expr 'EOF'
    action 'THEN' (noprec):   reduce toplevel --> expr 'EOF'
    action 'ELSE' (noprec):   reduce toplevel --> expr 'EOF'
    action 'EQUAL' (noprec):   reduce toplevel --> expr 'EOF'
    action 'LESS' (noprec):   reduce toplevel --> expr 'EOF'
    action 'PLUS' (noprec):   reduce toplevel --> expr 'EOF'
    action 'MINUS' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TIMES' (noprec):   reduce toplevel --> expr 'EOF'
    action 'DIVIDE' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TRUE' (noprec):   reduce toplevel --> expr 'EOF'
    action 'FALSE' (noprec):   reduce toplevel --> expr 'EOF'
    action 'BOOL' (noprec):   reduce toplevel --> expr 'EOF'
    action 'FLOAT' (noprec):   reduce toplevel --> expr 'EOF'
    action 'INT' (noprec):   reduce toplevel --> expr 'EOF'
    action 'VAR' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TARROW' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TBOOL' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TFLOAT' (noprec):   reduce toplevel --> expr 'EOF'
    action 'TINT' (noprec):   reduce toplevel --> expr 'EOF'
    action 'error' (noprec):   reduce toplevel --> expr 'EOF'
    action '#' (noprec):   reduce toplevel --> expr 'EOF'
    action '$$' (noprec):   reduce toplevel --> expr 'EOF'

  immediate action:   reduce toplevel --> expr 'EOF'
 gotos:

state 10:
  items:
    toplevel -> expr 'SEMICOLON2' . 'EOF'
    toplevel -> expr 'SEMICOLON2' . toplevel

  actions:
    action 'EOF' (noprec):   shift 4
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   shift 13
    action 'LPAREN' (noprec):   shift 44
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (explicit nonassoc 9994):   shift 27
    action 'IS' (noprec):   error
    action 'IF' (explicit nonassoc 9995):   shift 21
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9997):   shift 47
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   shift 41
    action 'FALSE' (noprec):   shift 42
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   shift 43
    action 'VAR' (noprec):   shift 40
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto toplevel: 12
    goto def: 5
    goto expr: 8
    goto app: 18
    goto non_app: 17
    goto arithmetic: 19
    goto cond: 20

state 11:
  items:
    toplevel -> def 'SEMICOLON2' toplevel . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'SEMICOLON2' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'LET' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'LPAREN' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'RPAREN' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'COLON' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'FUN' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'IS' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'IF' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'THEN' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'ELSE' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'EQUAL' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'LESS' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'PLUS' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'MINUS' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TIMES' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'DIVIDE' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TRUE' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'FALSE' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'BOOL' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'FLOAT' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'INT' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'VAR' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TARROW' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TBOOL' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TFLOAT' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'TINT' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action 'error' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action '#' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel
    action '$$' (noprec):   reduce toplevel --> def 'SEMICOLON2' toplevel

  immediate action:   reduce toplevel --> def 'SEMICOLON2' toplevel
 gotos:

state 12:
  items:
    toplevel -> expr 'SEMICOLON2' toplevel . 

  actions:
    action 'EOF' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'SEMICOLON2' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'LET' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'LPAREN' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'RPAREN' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'COLON' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'FUN' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'IS' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'IF' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'THEN' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'ELSE' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'EQUAL' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'LESS' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'PLUS' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'MINUS' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TIMES' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'DIVIDE' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TRUE' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'FALSE' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'BOOL' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'FLOAT' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'INT' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'VAR' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TARROW' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TBOOL' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TFLOAT' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'TINT' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action 'error' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action '#' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel
    action '$$' (noprec):   reduce toplevel --> expr 'SEMICOLON2' toplevel

  immediate action:   reduce toplevel --> expr 'SEMICOLON2' toplevel
 gotos:

state 13:
  items:
    def -> 'LET' . 'VAR' 'EQUAL' expr

  actions:
    action 'EOF' (noprec):   error
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (noprec):   error
    action 'IS' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   error
    action 'VAR' (noprec):   shift 14
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 14:
  items:
    def -> 'LET' 'VAR' . 'EQUAL' expr

  actions:
    action 'EOF' (noprec):   error
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   error
    action 'LPAREN' (noprec):   error
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (noprec):   error
    action 'IS' (noprec):   error
    action 'IF' (noprec):   error
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (explicit nonassoc 9996):   shift 15
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (noprec):   error
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   error
    action 'FALSE' (noprec):   error
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   error
    action 'VAR' (noprec):   error
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:

state 15:
  items:
    def -> 'LET' 'VAR' 'EQUAL' . expr

  actions:
    action 'EOF' (noprec):   error
    action 'SEMICOLON2' (noprec):   error
    action 'LET' (noprec):   error
    action 'LPAREN' (noprec):   shift 44
    action 'RPAREN' (noprec):   error
    action 'COLON' (noprec):   error
    action 'FUN' (explicit nonassoc 9994):   shift 27
    action 'IS' (noprec):   error
    action 'IF' (explicit nonassoc 9995):   shift 21
    action 'THEN' (noprec):   error
    action 'ELSE' (noprec):   error
    action 'EQUAL' (noprec):   error
    action 'LESS' (noprec):   error
    action 'PLUS' (noprec):   error
    action 'MINUS' (explicit left 9997):   shift 47
    action 'TIMES' (noprec):   error
    action 'DIVIDE' (noprec):   error
    action 'TRUE' (noprec):   shift 41
    action 'FALSE' (noprec):   shift 42
    action 'BOOL' (noprec):   error
    action 'FLOAT' (noprec):   error
    action 'INT' (noprec):   shift 43
    action 'VAR' (noprec):   shift 40
    action 'TARROW' (noprec):   error
    action 'TBOOL' (noprec):   error
    action 'TFLOAT' (noprec):   error
    action 'TINT' (noprec):   error
    action 'error' (noprec):   error
    action '#' (noprec):   error
    action '$$' (noprec):   error

  immediate action: <none>
 gotos:
    goto expr: 16
    goto app: 18
    goto non_app: 17
    goto arithmetic: 19
    goto cond: 20

state 16:
  items:
    def -> 'LET' 'VAR' 'EQUAL' expr . 
    arithmetic -> expr . 'PLUS' expr
    arithmetic -> expr . 'MINUS' expr
    arithmetic -> expr . 'TIMES' expr
    arithmetic -> expr . 'DIVIDE' expr
    cond -> expr . 'EQUAL' expr
    cond -> expr . 'LESS' expr
